k8s/mainflux/dashflux.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dashflux
  labels:
    component: dashflux
spec:
  template:
    metadata:
      labels:
        component: dashflux
    spec:
      containers:
      - name: dashflux
#        image: mainflux/dashflux:latest
        image: juanman/dashflux:original
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dashflux
  labels:
    component: dashflux
spec:
  selector:
    component: dashflux
  ports:
  - port: 3000
  type: LoadBalancer
