k8s/mainflux/normalizer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: normalizer
  labels:
    component: normalizer
spec:
  selector:
    component: normalizer
  ports:
  - port: 8184
    name: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: normalizer
  labels:
    component: normalizer
spec:
  template:
    metadata:
      labels:
        component: normalizer
    spec:
      containers:
      - name: mainflux-normalizer
        image: mainflux/normalizer:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /version
            port: 8184
          initialDelaySeconds: 3
          periodSeconds: 3
