k8s/mainflux/users-postgres.yml
apiVersion: v1
kind: Pod
metadata:
  name: mainflux-users-postgres
  labels:
    name: mainflux-users-postgres
spec:
  containers:
    - name: mainflux-users-postgres
      image: postgres:10.2-alpine
      ports:
        - containerPort: 5432
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: mainflux-users-postgres-data
  volumes:
    - name: mainflux-users-postgres-data
      persistentVolumeClaim:
        claimName: mainflux-users-postgres-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mainflux-users-postgres
  labels:
    name: mainflux-users-postgres
spec:
  ports:
    - port: 5432
  selector:
    name: mainflux-users-postgres
