k8s/mainflux/http.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-adapter
  namespace: grpc-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mainflux-iot.ha.rs
    secretName: mainflux-secret
  rules:
  - host: mainflux-iot.ha.rs
    http:
      paths:
      - path: /http
        backend:
          serviceName: http-adapter
          servicePort: 8185
---
apiVersion: v1
kind: Service
metadata:
  name: http-adapter
  namespace: grpc-services
  labels:
    component: http-adapter
spec:
  type: LoadBalancer
  selector:
    component: http-adapter
  ports:
  - port: 8185
    name: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: http-adapter
  namespace: grpc-services
  labels:
    component: http-adapter
spec:
  template:
    metadata:
      labels:
        component: http-adapter
    spec:
      containers:
      - name: mainflux-http
        image: mainflux/http:latest
        ports:
        - containerPort: 8185
        livenessProbe:
          httpGet:
            path: /version
            port: 8185
          initialDelaySeconds: 3
          periodSeconds: 3
