k8s/mainflux/mqtt.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mqtt-adapter
  namespace: grpc-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mainflux-iot.ha.rs
    http:
      paths:
      - path: /mqtt
        backend:
          serviceName: mqtt-adapter
          servicePort: 8880
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-adapter
  namespace: grpc-services
  labels:
    component: mqtt-adapter
spec:
  selector:
    component: mqtt-adapter
  ports:
  - port: 1883
    name: mqtt
  - port: 8880
    name: ws
  type: LoadBalancer
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mqtt-adapter
  namespace: grpc-services
  labels:
    component: mqtt-adapter
spec:
  template:
    metadata:
      labels:
        component: mqtt-adapter
    spec:
      containers:
      - name: mainflux-mqtt
#        image: mainflux/mqtt:latest
        image: juanman/mqtt:original
        imagePullPolicy: Always
        ports:
        - containerPort: 1883
          name: mqtt-mqtt
        - containerPort: 8880
          name: mqtt-ws
