k8s/mainflux/ws.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ws-adapter
  namespace: grpc-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mainflux-iot.ha.rs
    secretName: mainflux-secret
  rules:
  - host: mainflux-iot.ha.rs
    http:
      paths:
      - path: /ws
        backend:
          serviceName: ws-adapter
          servicePort: 8186
---
apiVersion: v1
kind: Service
metadata:
  name: ws-adapter
  namespace: grpc-services
  labels:
    component: ws-adapter
spec:
  type: LoadBalancer
  selector:
    component: ws-adapter
  ports:
  - port: 8186
    name: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ws-adapter
  namespace: grpc-services
  labels:
    component: ws-adapter
spec:
  template:
    metadata:
      labels:
        component: ws-adapter
    spec:
      containers:
      - name: mainflux-ws
        image: mainflux/ws:latest
        ports:
        - containerPort: 8186
